<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/about_text" >
    </TextView>

    <TextView
        android:id="@+id/by_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/by_text" />

    <Button
        android:id="@+id/donate_paypal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/donation_paypal" />
    
    <Button
        android:id="@+id/donate_btc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/donation_bitcoin"
        android:layout_weight="1" />
    

    <Button
        android:id="@+id/send_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/send_email" />


    <Button
        android:id="@+id/purchase_premium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/purchase_premium" />

</LinearLayout>