<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:gravity="bottom|top"
    android:orientation="vertical"
    android:weightSum="4" >

    <TextView
        android:id="@+id/initiative_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:focusable="false"
        android:text="@string/initiative_layout_text"
        android:textSize="10pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sort"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/sort" />

        <Button
            android:id="@+id/addplr"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/add_player" />

        <Button
            android:id="@+id/newturn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/new_turn" />

        <Button
            android:id="@+id/save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/save" />

        <Button
            android:id="@+id/load"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/load" />
    </LinearLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:focusable="false"
        android:text="@string/turn_of" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:descendantFocusability="blocksDescendants"
        android:drawSelectorOnTop="true"
        android:focusable="false"
        android:minHeight="100dp" >
    </ListView>

</LinearLayout>