<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:descendantFocusability="afterDescendants"
    style="@android:style/Theme.Black">

    <LinearLayout
        android:id="@+id/element_row_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100"
        tools:context=".AndroidBitcoinCenter" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/name"
                android:textSize="@dimen/textLittle" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:tag="Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus"
                android:textSize="@dimen/textLittle" />

            <EditText
                android:id="@+id/bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dice"
                android:inputType="numberSigned"
                android:tag="Bonus"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dice"
                android:textSize="@dimen/textLittle" />

            <EditText
                android:id="@+id/dice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dice"
                android:inputType="numberSigned"
                android:tag="Dice"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="@dimen/textLittle" />

            <EditText
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total"
                android:inputType="numberSigned"
                android:tag="Total"
                android:text="@string/zero" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/element_row_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/sum1hp"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sum1hp" />

                <Button
                    android:id="@+id/quit1hp"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/quit1hp" />
            </LinearLayout>

            <TextView
                android:id="@+id/hitpoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hitpoints"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/attack_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attack_bonus"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/armor_class"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/armor_class"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/action1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <Spinner
                android:id="@+id/action2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:orientation="vertical" >

            <Button
                android:id="@+id/stats_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:text="@string/stats"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/delete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:text="@string/delete" />
        </LinearLayout>
	</LinearLayout>
</LinearLayout>
